--- a/arrays-loops-styles/css/index.css
+++ b/arrays-loops-styles/css/index.css
@@ -140,3 +140,22 @@ button[disabled=disabled], button:disabled {
 #error-messages {
     color: red;
 }
+
+.fadeOut{
+	opacity: 0;
+	transition: 0.5s;
+}
+
+#filter-table{
+	width: 280px;
+	height: 35px;
+	margin-bottom: 10px;
+}
+
+.hide-patient{
+	display: none;
+}
+
+.invisible{
+	display: none;
+}
